# DataScienceProject

./: .flake8  .gitignore  Dockerfile  README.md  Steps.md  app.py  main.py  pyproject.toml  requirements.txt  schema.yaml  template.py
.github/workflows/: deploy.yaml
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
research/: 3. DataTransformation.ipynb  4. Model Trainer.ipynb  5. Model Evaluation.ipynb  dataingestion.ipynb  datavalidation.ipynb  research.ipynb
src/datascience/: __init__.py
src/datascience/components/: dataingestion.py  datatransformation.py  datavalidation.py  modelevaluation.py  modeltrainer.py
src/datascience/config/: configuration.py
src/datascience/entity/: config_entity.py
src/datascience/pipeline/: dataingestionpipeline.py  datatransformationpipeline.py  datavalidationpipeline.py  modelevaluationpipeline.py  modeltrainerpipeline.py  predictionpipeline.py
src/datascience/utils/: main_utils.py
templates/: index.html  results.html  train.html
