[project]
name = "datascienceproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260510",
]
